[package]
name = "codeplan-tui"
version = "0.1.0"
authors = ["Vinícius Antonioli <vinicius@openbuild.dev>"]
edition = "2018"

[dependencies]
crossterm = { version = "0.19", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.7.3", default-features = false, features = ["std"] }
tui = { version = "0.15", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "1.0"
reqwest = "0.11.3"
